--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ProductDetail"></activity>
+        <activity android:name=".ProductDetail" />
+        <activity android:name=".PurchaseHistory"></activity>
     </application>
 
 </manifest>
