--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,20 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "tn30.sh181.qrshopping"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -56,8 +66,6 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:4.27.0'
     // Required only if Twitter login support is required
     implementation('com.twitter.sdk.android:twitter-core:3.0.0@aar') { transitive = true }
-    //tag view
-    implementation 'com.github.Cutta:TagView:1.3'
     //volley
     implementation 'com.android.volley:volley:1.1.0'
     //credit card form
@@ -69,10 +77,8 @@ dependencies {
     implementation('com.crashlytics.sdk.android:answers:1.4.1@aar') {
         transitive = true
     }
+    //fingerprint
+    implementation 'com.github.JesusM:FingerprintManager:v2.0.2'
 }
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
