Adds Shopping Cart

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
             android:name="io.fabric.ApiKey"
             android:value="eb25c5c70eb677120f8140f0f730158908ccd8c4" />
 
+        <activity android:name=".ProductList"></activity>
         <activity android:name=".CartList"></activity>
     </application>
 
